feat: add licences to data models
